--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -222,9 +222,17 @@ a[href^="http"] {
 }
 
 .check_yes {
-  background: url("../../images/icons/check_yes.png") no-repeat 100% 0;
+  color: transparent;
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  background-image: url("../../images/icons/check_yes.png");
   background-size: 17px 17px;
-  padding-right: 20px;
+  line-height: 1.2;
+}
+
+.check_yes::selection {
+  color: transparent;
 }
 
 h2 {
