--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -690,20 +690,27 @@ a[href^="http"] {
     padding-right: 20px; 
 }
 
-.check_yes {
+.check_yes, .check_no {
     color: transparent;
     display: inline-block;
     width: 17px;
     height: 17px;
-    background-image: url('../../images/icons/check_yes.png');   
     background-size: 17px 17px;
     line-height: 1.2;
 }
 
-.check_yes::selection { 
+.check_yes::selection, .check_no::selection { 
     
     color: transparent;
 } 
+
+.check_yes {
+    background-image: url('../../images/icons/check_yes.png');   
+}
+
+.check_no {
+    background-image: url('../../images/icons/check_no.png');   
+}
 
 @for $i from 2 through 6 {
 
