--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -685,7 +685,7 @@ a {
 a[href^="http"] {
     color: $color_text;
     text-decoration: underline;
-    background: url('../../images/icons/link_external.png') no-repeat 100% 0;   
+    background: url('../../images/icons/web_globe.png') no-repeat 100% 0;   
     background-size: 17px 17px; 
     padding-right: 20px; 
 }
