--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -216,7 +216,7 @@ a {
 a[href^="http"] {
   color: black;
   text-decoration: underline;
-  background: url("../../images/icons/link_external.png") no-repeat 100% 0;
+  background: url("../../images/icons/web_globe.png") no-repeat 100% 0;
   background-size: 17px 17px;
   padding-right: 20px;
 }
