--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -683,8 +683,8 @@ a {
 } 
 
 a[href^="http"] {
-    color: $color_text;
-    text-decoration: underline;
+    // color: $color_text;
+    // text-decoration: underline;
     background: url('../../images/icons/web_globe.png') no-repeat 100% 0;   
     background-size: 17px 17px; 
     padding-right: 20px; 
